@@ -32,7 +32,6 @@ typedef enum {
     H2_CONF_STREAM_MAX_MEM,
     H2_CONF_ALT_SVCS,
     H2_CONF_ALT_SVC_MAX_AGE,
-    H2_CONF_SER_HEADERS,
     H2_CONF_DIRECT,
     H2_CONF_MODERN_TLS_ONLY,
     H2_CONF_UPGRADE,
